--- a/src/app/offers/vehicle-full/vehicle-full.page.html
+++ b/src/app/offers/vehicle-full/vehicle-full.page.html
@@ -126,7 +126,7 @@
           </ion-row>
           <ion-row aria-colspan="2">
             <ion-col class="cell-class">
-              <ion-label class="lblInput">{{offer.veiculo.versao}}</ion-label>
+              <ion-label class="lblInput">{{offer.veiculo.referencia}}</ion-label>
             </ion-col>
           </ion-row>
           <ion-row aria-colspan="2">
