--- a/src/app/company/company.page.scss
+++ b/src/app/company/company.page.scss
@@ -2,13 +2,169 @@ ion-menu-button {
   color: var(--ion-color-primary);
 }
 
-#container {
-  text-align: center;
+ion-content {
+  display: flex;
+  font-size: 20px !important;
+  max-height: calc(99%) !important;
+}
+
+ion-col {
+  text-align: left;
+  align-items: left;
+  align-content: left;
+}
+
+ion-label {
+  text-align: left;
+  align-items: left;
+  align-content: left;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+ion-card {
+  width: 90%;
+  background-color: #daf7ed;
+  color: #000000;
+  margin: 20px;
+  box-shadow: 5px 5px 5px rgb(12, 11, 31);
+}
+
+
+
+ion-textarea {
+  width: 100%;
+  text-align: justify;
+  font-size: 20px !important;
+  font-weight: 500;
+  border: 1px solid #5a5959;
+  border-radius: 5px;
+  background: white;
+  color: black;
+  padding: 4px !important;
+}
+
+:root {
+  --ion-safe-area-top: 20px;
+  --ion-safe-area-bottom: 22px;
+}
+
+ion-radio-group .item-radio-checked ion-icon {
+  fill: teal;
+}
+
+ion-radio-group ion-icon::after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background: teal;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 5px;
+  left: 5px;
+  border-radius: 50%;
+  transition: transform 0.28s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transform: scale(0);
+}
+
+ion-radio-group .item-radio-checked ion-icon::after {
+  transform: scale(1);
+}
+
+ion-input {
+  height: 25px;
+  width: 95%;
+  text-align: left;
+  align-items: left;
+  align-content: left;
+  font-size: 20px !important;
+  font-weight: 500;
+  border: 1px solid #5a5959;
+  border-radius: 5px;
+  background: white;
+  color: black;
+  padding: 4px !important;
+  content: '✓';
+}
+
+ion-select {
+  height: 25px;
+  width: 200px;
+  text-align: left;
+  align-items: left;
+  align-content: left;
+  font-size: 20px !important;
+  font-weight: 500;
+  border: 1px solid #5a5959;
+  border-radius: 5px;
+  background: white;
+  color: black;
+  padding: 4px !important;
+}
+
+ion-item-divider {
+  min-height: 2px !important;
+}
+
+ion-button {
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+  font-size: 20px !important;
+  color:#dbd7d7 !important; 
+  border: 1px solid #5a5959 !important; 
+  border-radius: 5px;
+}
+
+
+
+
+
+
+
+#box {
+
+  display: flexbox;
+  height: 50px;
+
+  #leftbox {
+    float: left;
+    background: rgb(20, 95, 1);
+    width: 30%;
+  }
+
+  #rightbox {
+    float: right;
+    background: #ff0000;
+    width: 30%;
+  }
+
+  ion-icon {
+    font-size: 36px;
+    color: #ffffff;
+  }
+
+}
+
+
+
+
+#container {
+  display: block;
+  max-height: calc(95%);
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+
+  ::-webkit-scrollbar {
+    display: block;
+  }
 }
 
 #container strong {
@@ -17,12 +173,16 @@ ion-menu-button {
 }
 
 #container p {
-  font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
   line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
+  color: red;
+  margin-top: 15px;
+  margin: 5px;
 }
 
 #container a {
   text-decoration: none;
 }
+
