--- a/src/app/perimeters/perimeters.page.html
+++ b/src/app/perimeters/perimeters.page.html
@@ -3,17 +3,57 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Perímetros</ion-title>
+    <ion-title size="large">
+      Perímetros
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Perímetros</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <div id="addBox" (click)="adicionar()">
+    <ion-icon name="add-outline"></ion-icon>
+    <ion-icon name="location-outline"></ion-icon>
+  </div>
 
   <div id="container">
+    <div id="carregando" *ngIf="!perimeters">
+      {{carregando}}
+    </div>
+    <div *ngIf="perimeters">
+
+
+      <ion-card *ngFor="let perimeter of perimeters">
+        <ion-card-content>
+
+          <ion-grid class="dadosGrid" (click)="abrir(perimeter.id)">
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label>Range (km):<b>{{ perimeter.range }}</b></ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label>Latitude: {{ perimeter.latitude }}</ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label>Longitude: {{ perimeter.longitude }}</ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <div id="minusBox" (click)="apagar()">
+            <ion-icon name="remove-outline"></ion-icon>
+            <ion-icon name="location-outline"></ion-icon>
+          </div>
+
+
+        </ion-card-content>
+
+      </ion-card>
+
+    </div>
   </div>
 </ion-content>
