--- a/src/app/perimeters/perimeters.page.scss
+++ b/src/app/perimeters/perimeters.page.scss
@@ -2,13 +2,96 @@ ion-menu-button {
   color: var(--ion-color-primary);
 }
 
+
+ion-label {
+  font-size: 20px;
+}
+
+.semQuebra{
+  white-space: nowrap;
+}
+
+ion-card {
+  width: 90%;
+  background-color: #dbd7d7;
+  color: #000000;
+  margin: 20px;
+  box-shadow: 5px 5px 5px rgb(12, 11, 31);
+}
+
+.cell-class {
+  border-color: black;
+  border-width: .01em;
+  border-style: solid;
+  margin-bottom: -1px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+
+#addBox {
+  width: 100px;
+  margin: 10px;
+  background: rgb(20, 95, 1);
+  border-radius: 20px;
+}
+
+#minusBox {
+  width: 100px;
+  max-height: 65px;
+  margin: 5px;
+  align-items: flex-end;
+  align-content:flex-end;
+  background: #ff0000;
+  border-radius: 25px;
+  float:right;
+}
+
+.dadosGrid {
+  width: 90%;
+}
+
+ion-icon {
+  font-size: 40px;
+  color: #ffffff;
+}
+
+
+ion-content {
+  display: block;
+  max-height: calc(98%) !important;
+}
+
 #container {
+  max-height: calc(85%) !important;
+  width: 98%;
+  margin: auto;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: #e0dada;
+
+  display: block;
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+
+  ::-webkit-scrollbar {
+    display: block;
+  }
+
+
+  #carregando {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    text-align: center;
+    font-weight: bold;
+    font-size: 26px;
+    color: red;
+    margin: 20px;
+    height: 600px;
+    }
+
 }
 
 #container strong {
@@ -17,12 +100,25 @@ ion-menu-button {
 }
 
 #container p {
+  text-align: center;
+  font-weight: bold;
   font-size: 16px;
   line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
+  color: red;
+  margin-top: 15px;
+  margin: 5px;
 }
 
 #container a {
   text-decoration: none;
+}
+
+
+#agencia {
+  width: 95% !important;
+  font-size: 22px;
+  line-height: 22px;
+  color: #260975;
+  margin: 2px;
+  text-align: center;
 }
