--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -3,17 +3,62 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Usuários - Vendedores</ion-title>
+    <ion-title size="large">
+      Usuários
+    </ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="normal">Cadastro de Vendedores</ion-title>
+      <ion-title size="normal">Usuários</ion-title>
     </ion-toolbar>
   </ion-header>
 
+  <div id="addBox" (click)="adicionar()">
+    <ion-icon name="person-add-outline"></ion-icon>
+  </div>
+
   <div id="container">
+    <div id="carregando" *ngIf="!users">
+      {{carregando}}
+    </div>
+    <div *ngIf="users">
+
+
+      <ion-card *ngFor="let user of users">
+        <ion-card-content>
+
+          <ion-grid class="dadosGrid" (click)="abrir(user.id)">
+            <ion-row aria-colspan="4">
+              <ion-col class="cell-class">
+                <ion-label><b>{{ user.name }}</b></ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ user.mail }}</ion-label>
+              </ion-col>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ user.phone }}</ion-label>
+              </ion-col>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ (user.role == "platform_manager_access")? "Gerente": "Vendedor"}}</ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <div id="minusBox" slot="end" (click)="apagar()">
+            <ion-icon name="remove-outline"></ion-icon>
+            <ion-icon name="person-outline"></ion-icon>
+          </div>
+
+
+        </ion-card-content>
+
+      </ion-card>
+
+    </div>
   </div>
 </ion-content>
