--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,25 @@
 @import '~@ionic/angular/css/ionic-swiper';
 
 @import './main.css';
+
+
+.toast-good-custom-class {
+    --color:#ffffff;
+    --border-radius:5px;
+    --border-style:solid;
+    --border-width:3px;    
+    --background:#1a992b;
+    --button-color:#ffffff;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+}
+.toast-bad-custom-class {
+    --color:#ffffff;
+    --border-radius:5px;
+    --border-style:solid;
+    --border-width:3px;    
+    --background:#ff1818;
+    --button-color:#ffffff;
+    font-size: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+}
